force-app/main/default/objects/Contact/fields/award_points__c.field-meta.xml
<CustomField>
    <fullName>award_points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>award points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>