force-app/main/default/objects/Contact/fields/integration_id__c.field-meta.xml
<CustomField>
    <fullName>integration_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>integration id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>