force-app/main/default/objects/Contact/fields/opt_out_YRI__c.field-meta.xml
<CustomField>
    <fullName>opt_out_YRI__c</fullName>
    <label>opt out YRI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>not requested</fullName>
                <default>true</default>
                <label>not requested</label>
            </value>
            <value>
                <fullName>requested</fullName>
            </value>
            <value>
                <fullName>opt out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>