force-app/main/default/objects/Contact/fields/transaction_points__c.field-meta.xml
<CustomField>
    <fullName>transaction_points__c</fullName>
    <label>transaction points</label>
    <summarizedField>transaction_list__c.award_points__c</summarizedField>
    <summaryForeignKey>transaction_list__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>