force-app/main/default/objects/Contact/fields/yashorgb_id__c.field-meta.xml
<CustomField>
    <fullName>yashorgb_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>yashorgb id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>