force-app/main/default/objects/Contact/validationRules/balance_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>balance_cannot_be_modified</fullName>
    <active>true</active>
    <description>Balance cannot be modified while creation or update</description>
    <errorConditionFormula>OR(
AND(ISNEW(),award_points__c!=0)
)</errorConditionFormula>
    <errorDisplayField>award_points__c</errorDisplayField>
    <errorMessage>Balance cannot be modified manually during creation</errorMessage>
</ValidationRule>