force-app/main/default/objects/Contact/validationRules/balance_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>balance_negative</fullName>
    <active>true</active>
    <errorConditionFormula>award_points__c &lt; 0</errorConditionFormula>
    <errorMessage>Balance cannot be less than 0</errorMessage>
</ValidationRule>