force-app/main/default/objects/Contact/validationRules/Contact_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_cannot_be_edited</fullName>
    <active>true</active>
    <description>Opted out contact cannot be edited.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &apos;System Administrator&apos;),
NOT($Permission.BYPASS_CONTACT_VALIDATIONS),
ISPICKVAL(PRIORVALUE(opt_out_YRI__c), &quot;opt out&quot;),
OR(
ISCHANGED(AccountId),
ISCHANGED(Email),
ISCHANGED(FirstName),
ISCHANGED(isactive__c),
ISCHANGED(LastName),
ISCHANGED(User__c),
ISCHANGED(opt_out_YRI__c)
)
)</errorConditionFormula>
    <errorMessage>Opted out contacts cannot be modified.</errorMessage>
</ValidationRule>